1566: support unicode characters in filenames like http://jfaden.net/~jbf/i18n/23.12.2008 Satellitenfiles/Themis A/FGM längere Zeit.vap
svn path=/dasCore/community/autoplot2011/trunk/; revision=9356